WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
137655
Fix the !ENABLE(VIDEO) build after
r174353
https://bugs.webkit.org/show_bug.cgi?id=137655
Summary
Fix the !ENABLE(VIDEO) build after r174353
Csaba Osztrogonác
Reported
2014-10-13 03:40:22 PDT
Fix the !ENABLE(VIDEO) build after
r174353
Attachments
Patch
(3.36 KB, patch)
2014-10-13 03:40 PDT
,
Csaba Osztrogonác
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Csaba Osztrogonác
Comment 1
2014-10-13 03:40:54 PDT
Created
attachment 239722
[details]
Patch Linking CXX shared library ../../lib/libewebkit2.so ../../lib/../Source/WebCore/CMakeFiles/WebCore.dir/dom/Document.cpp.o: In function WebCore::Document::updateIsPlayingAudio(): Document.cpp:(.text._ZN7WebCore8Document20updateIsPlayingAudioEv+0x44): undefined reference to WebCore::MediaSession::hasMediaCharacteristics(unsigned int) const collect2: error: ld returned 1 exit status
Ada Chan
Comment 2
2014-10-13 10:45:57 PDT
Thanks for fixing, Csaba.
WebKit Commit Bot
Comment 3
2014-10-14 01:14:04 PDT
Comment on
attachment 239722
[details]
Patch Clearing flags on attachment: 239722 Committed
r174674
: <
http://trac.webkit.org/changeset/174674
>
WebKit Commit Bot
Comment 4
2014-10-14 01:14:08 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug