Fix the !ENABLE(VIDEO) build after r174353 https://bugs.webkit.org/show_bug.cgi?id=137655

Reviewed by Darin Adler.

* dom/Document.cpp:
* dom/Document.h:
* page/Page.cpp:
* page/Page.h:


Canonical link: https://commits.webkit.org/155535@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@174674 268f45cc-cd09-0410-ab3c-d52691b4dbfc