Source/WebCore/page/Page.cpp
@@ -1193,6 +1193,7 @@ void Page::enableLegacyPrivateBrowsing(bool privateBrowsingEnabled)
     setSessionID(privateBrowsingEnabled ? SessionID::legacyPrivateSessionID() : SessionID::defaultSessionID());
 }
 
+#if ENABLE(VIDEO)
 void Page::updateIsPlayingAudio()
 {
     bool isPlayingAudio = false;
@@ -1210,6 +1211,7 @@ void Page::updateIsPlayingAudio()
 
     chrome().client().isPlayingAudioDidChange(m_isPlayingAudio);
 }
+#endif
 
 #if !ASSERT_DISABLED
 void Page::checkSubframeCountConsistency() const
